# polyvr

./: .gitignore  CMakeLists.txt  CMakeLists.txt.win  Makefile  PolyVR-optirun.sh  PolyVR.bat  PolyVR.bg.sh  PolyVR.cbp  PolyVR.cscope_file_list  PolyVR.desktop  PolyVR.sh  PolyVR_14.04.cbp  PolyVR_16.04.cbp  PolyVR_18.04.cbp  PolyVR_19.04.cbp  PolyVR_20.04.cbp  PolyVR_22.04.cbp  PolyVR_24.04.cbp  PolyVR_26.04.cbp  PolyVR_py3_22.04.cbp  PolyVR_splitted_22.04.cbp  README.md  application-x-polyvr.xml  cylindertest.xml  install  macLibs.txt  metaballs.xml  pack_app.sh  pack_app2.sh  pack_app3.sh  particles1.xml  setup-win  start-win-hidden.vbs  start-win.bat  start-win2.bat  startSlaves.sh  stopSlaves.sh
.github/workflows/: build.yaml
deprecated/: PolyVR_14.04.cbp
examples/: .gitignore  BRep.pvr  BobbingCubes.pvr  BobbingCubes_HeadTracking.pvr  Bricks.xml  CEF.xml  CSG.xml  CamStream.pvr  Car.osb  Car.pvr  CaveKeeper.xml  Character.pvr  Collaboration.pvr  Constraints.pvr  KA300.xml  Kinect.pvr  Kinematics.pvr  LeapAndStrokes.xml  LeapMotion.pvr  LeapMyoPicGallery.pvr  LocalShadows.pvr  Lod.pvr  Logistics.xml  Materials.pvr  Math.pvr  Mechanics.xml  MechanicsSimulation.xml  Metadata.xml  Molecules.xml  Nature.xml  Numbers.xml  Ontology.pvr  PathsAndStrokes.xml  Physics.xml  Planet.pvr  ProcessEngine.pvr  RenderToTexture.xml  Roads.pvr  Shadows.pvr  SortingPlant.pvr  (+44 more)
examples_collab/: .config  ClusterTest.pvr  Kinect.pvr  Kinematics.pvr  LeapMotion.pvr  LeapMyoPicGallery.pvr  LocalShadows.pvr  Lod.pvr  Logistics.xml  Math.pvr  MechanicsSimulation.xml  Metadata.xml  Molecules.xml  Ontology.pvr  PathsAndStrokes.xml  Shadows.pvr  Terrain.pvr  Tutorial1.xml  path_animations.xml  robotArm.dae  sceneImportSlave1.pvr  snapping.pvr  texturePaint.pvr
extras/: setupCodeblocks
extras/analytics/: PolyVR_18.04.cbp  analysis-01.03.20  analysis-02.03.20  computeIncludeGraph.py  testMain.cpp
extras/blender_scripts/: baking_add_imagetexture_to_all_mats.py  export_ply.py  importTS.py  merge_by_color.py  merge_by_color_sequence.py  print_vertex_per_object.py  remove_all_materials.py  remove_double_vertices_and_faces.py
extras/cluster/: powerwall  startFramelock
extras/cython/: kinect_utils.pyx
extras/generate_makefile/: README.md  generate.sh
extras/osgTests/: dirLightShadowsDS
extras/python/: aml.cpp  aml.py  collada.py  cpp2py.py  rosclient.py  sevrertest.py  testARTstream.py  udpsend.py  udpserv.py  vrml1_split.py  vrml2_split.py  websocket_example.py
extras/signing/: HOWTO-SIGN.txt
extras/testing/: checkLibs.sh  testSGInterface.py
extras/utils/: addClass.sh  createIcon  extractEXIF.sh  myApp.iss  polyvr.iss  searchMissingFiles.sh
ressources/brand/: PVR_logo_V1.blend  PVR_logo_V2.blend
ressources/cef/: CefSubProcess  CefSubProcess.cbp  WKSubProcess.cpp
ressources/cef18/: CefSubProcess  CefSubProcess.cbp  WKSubProcess.cpp
ressources/cefMac/: WKSubProcess.cpp
ressources/cefWin/: CMakeLists.txt  WKSubProcess.cpp  cef.pak  cef_100_percent.pak  cef_200_percent.pak  cef_extensions.pak  chrome_100_percent.pak  chrome_200_percent.pak  devtools_resources.pak
ressources/cefWin/locales/: af.pak  am.pak  ar.pak  bg.pak  bn.pak  ca.pak  cs.pak  da.pak  de.pak  el.pak  en-GB.pak  en-US.pak  es-419.pak  es.pak  et.pak  fa.pak  fi.pak  fil.pak  fr.pak  gu.pak  he.pak  hi.pak  hr.pak  hu.pak  id.pak  it.pak  ja.pak  kn.pak  ko.pak  lt.pak  lv.pak  ml.pak  mr.pak  ms.pak  nb.pak  nl.pak  pl.pak  pt-BR.pak  pt-PT.pak  ro.pak  (+15 more)
ressources/gui/: VRDirector.glade  VRDirector3.glade  VRDirector_min.glade  authors  default_scene.xcf  poweredby.xcf
setup/: Cave.xml  Desktop.xml  DesktopMin.xml  Desktop_Razer.xml  Desktop_localhost.xml  Dual_angle_screen.xml  Vive.xml
shader/: Billboard.vp  Blockworld.fp  Blockworld.gp  Blockworld.vp
src/: PolyVR.cpp  PolyVR.h  PolyVRFwd.h  PolyVR_WASM.h  SoftBody.cpp  main.cpp
src/cluster/: CMakeLists.txt  VRServer  VRServer.cbp  VRServer.cpp  clusterclient.cpp  clusterserver.cpp  setup  setup-win  setup_osg_examples  start  start-win-cave-proxy  start-win-cave.bat  start-win-ssh.bat  start-win.bat  start_examples  startw  stop  stop-win.bat
src/cluster/MWServer/: OSGClusterServer.cpp  OSGClusterServer.h  OSGClusterServer.inl  OSGClusterWindow.cpp  OSGClusterWindow.h  OSGClusterWindow.inl  OSGClusterWindowBase.inl  VRServer.cbp  VRServer.cpp  setup  start
src/core/gui/gtkglext/gdk/: .gitignore  Makefile.am  gdkgl.h  gdkglconfig.c  gdkglconfig.h  gdkglconfigimpl.h  gdkglcontext.c  gdkglcontext.h  gdkglcontextimpl.h  gdkgldebug.h  gdkgldefs.h  gdkgldrawable.c  gdkgldrawable.h  gdkglenumtypes.h  gdkglext.def  gdkglextcontext.c  gdkglextcontext.h  gdkglextcontextimpl.c  gdkglextcontextimpl.h  gdkglinit.c  gdkglinit.h  gdkglprivate.h  gdkglquery.h  gdkgltypes.h  gdkglversion.h  gdkglversion.h.in  gdkglwindow.c  gdkglwindow.h  gdkglwindowimpl.c  gdkglwindowimpl.h  gen-def-file.sh  gtkglenumtypes.c.template  gtkglenumtypes.h.template
src/core/gui/gtkglext/gdk/win32/: Makefile.am  gdkglconfig-win32.c  gdkglconfig-win32.h  gdkglcontext-win32.c  gdkglcontext-win32.h  gdkglextcontext-win32.c  gdkglextcontext-win32.h  gdkglprivate-win32.h  gdkglquery-win32.c  gdkglquery-win32.h  gdkglwin32.h  gdkglwindow-win32.c  gdkglwindow-win32.h  gdkwin32glconfig.c  gdkwin32glconfig.h  gdkwin32glcontext.c  gdkwin32glcontext.h  gdkwin32glextcontext.c  gdkwin32glextcontext.h  gdkwin32glquery.h  gdkwin32glwindow.c  gdkwin32glwindow.h
src/core/gui/gtkglext/gdk/x11/: Makefile.am  gdkglconfig-x11.c  gdkglconfig-x11.h  gdkglcontext-x11.c  gdkglcontext-x11.h  gdkglextcontext-x11.c  gdkglextcontext-x11.h  gdkglprivate-x11.h  gdkglquery-x11.c  gdkglquery-x11.h  gdkglwindow-x11.c  gdkglwindow-x11.h  gdkglx.h  gdkx11glconfig.c  gdkx11glconfig.h  gdkx11glcontext.c  gdkx11glcontext.h  gdkx11glextcontext.c  gdkx11glextcontext.h  gdkx11glquery.h  gdkx11glwindow.c  gdkx11glwindow.h
src/core/gui/gtkglext/gtk/: .gitignore  Makefile.am  gen-def-file.sh  gtkgl.h  gtkgldebug.h  gtkglext.def  gtkglinit.h  gtkglprivate.h  gtkglversion.h  gtkglversion.h.in  gtkglwidget.c  gtkglwidget.h
(+1754 files in other folders)
